examples/codegen/effects/nested_handles.an
effect Ping =
    do_ping: fn U32 -> U32

effect Pong =
    do_pong: fn U64 -> U64

foo {Ping} {Pong} =
    a = do_ping 1
    b = do_pong 2
    c = do_ping 3
    d = do_pong 4
    a + c, b + d

ping (f: fn Ping [env] -> a) =
    handler h for do_ping x ->
        println "ping?"
        r = resume (x * 2)
        println "ping!"
        r
    in f h

pong (f: fn Pong [env] -> a) =
    handler h for do_pong x ->
        println "pong?"
        r = resume (x * 3)
        println "pong!"
        r
    in f h

main () =
    a, b = ping fn pinger ->
        pong fn ponger ->
            foo {pinger} {ponger}

    println a //=> (1*2 + 3*2) = 8
    println b //=> (2*3 + 4*3) = 18

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/effects/nested_handles.an:7:6
// 7 | foo {Ping} {Pong} =	// error: This is an effect and cannot be used as an ordinary type
//   |      ^^^^
// 8 |     a = do_ping 1
// 
// examples/codegen/effects/nested_handles.an:7:13
// 7 | foo {Ping} {Pong} =	// error: This is an effect and cannot be used as an ordinary type
//   |             ^^^^
// 8 |     a = do_ping 1
// 
// examples/codegen/effects/nested_handles.an:8:9
//  7 | foo {Ping} {Pong} =
//  8 |     a = do_ping 1	// error: This can perform <Ping, _> but only <> is allowed here
//    |         ^^^^^^^
//  9 |     b = do_pong 2
// 
// examples/codegen/effects/nested_handles.an:9:9
//  8 |     a = do_ping 1
//  9 |     b = do_pong 2	// error: This can perform <Pong, _> but only <> is allowed here
//    |         ^^^^^^^
// 10 |     c = do_ping 3
// 
// examples/codegen/effects/nested_handles.an:10:9
//  9 |     b = do_pong 2
// 10 |     c = do_ping 3	// error: This can perform <Ping, _> but only <> is allowed here
//    |         ^^^^^^^
// 11 |     d = do_pong 4
// 
// examples/codegen/effects/nested_handles.an:11:9
// 10 |     c = do_ping 3
// 11 |     d = do_pong 4	// error: This can perform <Pong, _> but only <> is allowed here
//    |         ^^^^^^^
// 12 |     a + c, b + d
// 
// examples/codegen/effects/nested_handles.an:14:13
//    | // error: This is an effect and cannot be used as an ordinary type
// 14 | ping (f: fn Ping [env] -> a) =
//    |             ^^^^
// 15 |     handler h for do_ping x ->
// 
// examples/codegen/effects/nested_handles.an:20:10
// 19 |         r
// 20 |     in f h	// error: Argument 1 has type <Ping> but Ping was expected
//    |          ^
// 
// examples/codegen/effects/nested_handles.an:22:13
//    | // error: This is an effect and cannot be used as an ordinary type
// 22 | pong (f: fn Pong [env] -> a) =
//    |             ^^^^
// 23 |     handler h for do_pong x ->
// 
// examples/codegen/effects/nested_handles.an:28:10
// 27 |         r
// 28 |     in f h	// error: Argument 1 has type <Pong> but Pong was expected
//    |          ^
// 
// Found 10 errors and 0 warnings

